# agencydotai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/test_agency/: agency.yaml  main.py
examples/test_agency/prompts/: manager.md  researcher.md
src/agency/: __init__.py  agency.py  api.py  broker.py  cli.py  loader.py
src/agency/templates/: dashboard.html
tests/: test_e2e.py
