[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agencydotai"
version = "0.1.0"
description = "Asynchronous Event-Driven Multi-Agent AI Orchestration Framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "propenster", email = "faitholusegun60@gmail.com"} # Update with your info
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "langchain>=0.1.0",
    "pyyaml>=6.0"
]

[project.urls]
Homepage = "https://github.com/propenster/agencydotai"
Repository = "https://github.com/propenster/agencydotai"
Issues = "https://github.com/propenster/agencydotai/issues"

[project.scripts]
agencydotai = "agency.cli:main"

[tool.setuptools.packages.find]
where = ["src"]